# pep582

./: pyproject.toml
pep582/: .travis.yml  HISTORY.rst  Pipfile  README.rst  setup.cfg  setup.py  tox.ini
pep582/.github/: ISSUE_TEMPLATE.md
pep582/docs/: usage.rst
pep582/pep582/: __init__.py  cli.py  patch.py  site.py
pep582/tests/: test_pep582.py
