[tool.poetry]
name = "pep582"
version = "0.1.0"
description = "implements pep582(adds __pypackages__ to PYTHONPATH) via patching site.py",
authors = ["ph <robotnaoborot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
